bugfix: allow to wrap filter definition

--- a/css/style.less
+++ b/css/style.less
@@ -3289,6 +3289,7 @@ div.lms-ui-filter-container {
 	align-items: center;
 	div.lms-ui-filter-definition {
 		display: flex;
+		flex-wrap: wrap;
 		width: 80%;
 		& > *,
 		& > form > * {
